<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.com-->
<resources>
    <string name="navigation_drawer_open">Open navigation panel</string>
    <string name="navigation_drawer_close">Close navigation panel</string>
    <string name="success">Success</string>
    <string name="donate_developer">Donate to the developer</string>
    <string name="disable_ads">Disable ads</string>
    <string name="donate_small">Small donation</string>
    <string name="donate_big">Large donation</string>

    <!-- Названия активити -->
    <string name="app_name">Voice notes</string>
    <string name="app_name_note">Note</string>
    <string name="app_name_export_import">Export/import</string>

    <!-- Главное окно -->
    <string name="new_notes">Notes</string>
    <string name="new_note_notifications">Reminders</string>
    <string name="main_view_categories_title">Categories</string>  
    <string name="main_view_error_select">No objects selected</string>
    <string name="main_permissions_error">You did not provide all the permissions. We do not guarantee the working capacity of the application.</string>
    <string name="main_share_text">Notes created using the application:</string>
    <string name="main_share">Share</string>
    <string name="main_selected_element">items</string>
    <string name="main_action_element">Actions</string>
    <string name="main_action_remove">Delete</string>
    <string name="main_empty_notes">You do not have any notes yet</string>
    <string name="main_empty_notification">You do not have any reminders yet</string>
    <string name="main_empty_categories">You do not have any categories yet</string>     
    <string name="dialog_add_category_hint">Enter a name the new category</string>   
    <string name="main_edited">Edit</string>   
    <string name="main_unassigned">Unassigned</string>   
    <string name="main_all">All</string>   
    <string name="category_spinner_title">Select category</string>   
    <string name="category_spinner_filter">Filter</string>

    <string name="information_about_permissions_title">About the requested permissions</string> <!-- NEW -->
    <string name="information_about_permissions_text">
        <![CDATA[This message will appear only once, if it is important for you, why the application needs certain permissions - be sure to read it carefully.
        <br/><b>Access to files</b> - you need to export / import notes.
        <br/><b>Access to the Internet</b> - to recognize your speech more correctly on external servers.
        <br/><b>Record audio (microphone)</b> - get your speech to recognize and record notes.
        <br/><b>Setting the alarm</b> - for reminders of important notes]]>
        </string>
    <string name="ok">OK</string> <!-- NEW -->

    <!-- Меню -->
    <string name="menu_add">Add note</string>
    <string name="menu_notes_list">All notes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_export_import">Export/import</string>
    <string name="menu_sync">Cloud</string>
    <string name="menu_subs">Subscriptions</string>
    <string name="menu_help">Help</string>
    <string name="action_save">Save</string>
    <string name="action_remove">Delete selected</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="menu_statistics">Statistics</string>
    <string name="social_action_title">Tell us about your friends</string>

    <!-- Статистика -->
    <string name="statistics_level1">Beginner</string>
    <string name="statistics_level2">Specialist</string>
    <string name="statistics_level3">Experienced</string>
    <string name="statistics_level4">Expert</string>
    <string name="statistics_level5">Master</string>
    <string name="statistics_level6">Elite</string>
    <string name="statistics_create_notes_title">Total notes created:</string>
    <string name="statistics_create_notifications_title">Total reminders created:</string>
    <string name="statistics_get_notifications_title">Total received reminders:</string>
    <string name="statistics_remove_notes_title">Total deleted notes:</string>
    <string name="statistics_exports_title">Exported times:</string>
    <string name="statistics_imports_title">Imported times:</string>
    <string name="statistics_level_title">Level</string>
    <string name="statistics_experience_title">Experience</string>

    <!-- Новая заметка -->
    <string name="new_note">Note</string>
    <string name="new_note_notification">Reminder</string>
    <string name="new_note_text">Text notes</string>
    <string name="new_note_remind">Remind?</string>
    <string name="new_note_we_remind">Reminder time</string>
    <string name="new_note_select_time">Change time</string>
    <string name="new_note_sound_on">Sound</string>
    <string name="new_note_repeat_on">Repeat</string>
    <string name="new_note_shake_on">Vibrate</string>
    <string name="new_note_error_date">Select a date and time in the future</string>
    <string name="new_note_error_speech_recognition_title">Speech recognition error</string>
    <string name="new_note_error_speech_recognition">A required Google application is not installed or has been disabled. Would you like to install/enable it?
        \nYou will have to fully restart the app/smartphone afterward.</string>
    <string name="new_note_error_speech_recognition_ok">Install</string>
    <string name="new_note_error_speech_recognition_cancel">Cancel</string>
    <string name="new_note_error_speech_recognition_cancel_message">If you refuse, speech recognition probably won\'t work.</string>
    <string name="new_note_speech_recognition_message">Speak…</string>
    <string name="new_note_speech_recognition_start">Tap to speak</string>
    <string name="new_note_speech_recognition_error_audio">Audio recording error. Check the microphone settings.</string>
    <string name="new_note_speech_recognition_error_client">Other client side errors, restart the device and try again.</string>
    <string name="new_note_speech_recognition_error_insufficient_permissions">Insufficient permissions.
        Change the settings of the application, giving the necessary permissions.</string>
    <string name="new_note_speech_recognition_error_network">Other network related errors. Turn on the Internet and try again.</string>
    <string name="new_note_speech_recognition_error_network_timeout">Poor connection to the Internet, try disabling it and try offline recognition.</string>
    <string name="new_note_speech_recognition_error_no_match">The result may not correspond to what
        has been said, turn on the Internet to get a more accurate recognition or try to speak more
        clearly and loudly.</string>     
    <string name="new_note_speech_recognition_error_recognizer_busy">Server recognition is now occupied by another application. Try turning off other applications and try again.</string>
    <string name="new_note_speech_recognition_error_server">Server sends error status.</string>
    <string name="new_note_speech_recognition_error_server_fix">Download the package for offline recognition in the settings.</string>
    <string name="new_note_speech_recognition_error_speech_timeout">No speech input. Try again.</string>
    <string name="new_note_speech_recognition_close">Close</string>
    <string name="new_note_speech_recognition_fix">Fix </string>

    <!-- Диалоговые окна -->
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dialogDeleteTitle">Delete?</string>
    <string name="dialogDeleteMessage">These items will be deleted forever</string>

    <!-- Заметки просмотр -->
    <string name="note_view_remind_title">Voice Notes will remind you</string>
    <string name="note_view_remind_no_body">Never</string>
    <string name="note_view_add_reminder">add reminder</string>

    <!-- Экспорт и импорт -->
    <string name="export_import_export">Export</string>
    <string name="export_import_import">Import</string>
    <string name="export_import_select_type">Select type</string>
    <string name="export_import_select_folder">Select folder</string>
    <string name="export_import_set_name">File name</string>
    <string name="export_import_select_file">Select a file</string>
    <string name="export_import_select_no">Not selected</string>
    <string name="export_import_folder_not">Folder not selected</string>
    <string name="export_import_folder_error">Select a file, not a folder</string>
    <string name="export_import_error_import">The file may be corrupt</string>

    <!-- Голосовалка -->
    <string name="vote_text_header">Rate our app</string>
    <string name="vote_text_body">Write to us what you did not like or your suggestions</string>
    <string name="vote_text_ok">Write to us</string>
    <string name="vote_text_cancel">Cancel</string>

    <!-- Настройки -->
    <string name="settings_add_icon_add">Add an \"Add note\" icon to the desktop</string>
    <string name="settings_recognition_check">Check your device for the ability to use speech recognition</string>
    <string name="settings_notification_title">Reminders</string>
    <string name="settings_notification_clear">Reset sound reminder</string>
    <string name="settings_notification_sound">Select a sound for a reminder</string>
    <string name="settings_notification_not_sound">No sound selected</string>
    <string name="settings_notification_repetition_title">Repetition time</string>
    <string name="settings_notification_repetition_text">Time to repeat reminder</string>
    <string name="settings_notification_repetition_select5">5 minutes</string>
    <string name="settings_notification_repetition_select10">10 minutes</string>
    <string name="settings_notification_repetition_select15">15 minutes</string>
    <string name="settings_notification_repetition_select30">30 minutes</string>
    <string name="settings_notification_repetition_select60">60 minutes</string>
    <string name="settings_other_title">Other</string>
    <string name="settings_add_icon_add_title">Add icon</string>
    <string name="settings_select_theme_title">Change theme</string>  
    <string name="settings_select_theme_text">Choose a color scheme that you like</string>   
    <string name="settings_note_title">Notes</string>  
    <string name="settings_note_auto_save_title">Autosave</string>  
    <string name="settings_note_auto_save_text">It will save the note text automatically. Refers to new notes.</string>
    <string name="settings_note_select_language_recognize_title">Select the language of recognition</string>
    <string name="settings_note_select_language_recognize_text">If you want notes in a language other than the default on the device</string>
    <string name="settings_note_select_language_recognize_default">Default</string>

    <string name="settings_note_select_text_size_title">Select text size</string> <!-- NEW -->
    <string name="settings_note_select_text_size_text">Text size of notes</string> <!-- NEW -->

    <string name="error_search">Search failed. Fully restart the application.</string>

    <!-- Подписки -->
    <string name="subs_inner_text">All subscriptions remove ads from the app and represent donations to the developer</string>
    <string-array name="export_import_type">
        <item>JSON</item>
        <item>txt</item>
    </string-array>
    <string name="banner_ad_unit_id">ca-app-pub-3962065675469859/3569530194</string>
</resources>