<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_note_add_grey_24dp"
        android:title="@string/menu_add" />
    <item
        android:id="@+id/menu_notes_list"
        android:title="@string/menu_notes_list"
        android:icon="@drawable/ic_note_grey_24dp"
        app:actionLayout="@layout/note_counter"/>
    <item
        android:id="@+id/menu_import_export"
        android:icon="@drawable/ic_swap_vert_grey_24dp"
        android:title="@string/menu_export_import" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_grey_24dp"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_statistics"
        android:icon="@drawable/ic_equalizer_grey_24dp"
        android:title="@string/menu_statistics" />
    <item
        android:id="@+id/menu_subs"
        android:icon="@drawable/ic_monetization_on_grey_24dp"
        android:title="@string/menu_subs" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help_grey_24dp"
        android:title="@string/menu_help" />
</menu>
