<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/GawkMaterialTheme.SettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_notification_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <Button
            android:id="@+id/buttonSelectSound"
            style="@style/GawkMaterialTheme.SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_sound" />

        <TextView
            android:id="@+id/textViewSelectSound"
            style="@style/GawkMaterialTheme.SettingsSubText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_not_sound" />
    </LinearLayout>

    <View
        style="@style/GawkMaterialTheme.SettingsPadding"
        android:background="#E0E0E0"
        android:layout_height="1dp"
        android:layout_width="fill_parent"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/GawkMaterialTheme.SettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_other_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <Button
            android:id="@+id/buttonAddShortcut"
            style="@style/GawkMaterialTheme.SettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_add_icon_add_title" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/GawkMaterialTheme.SettingsSubText"
            android:text="@string/settings_add_icon_add" />

    </LinearLayout>

    <View
        style="@style/GawkMaterialTheme.SettingsPadding"
        android:background="#E0E0E0"
        android:layout_height="1dp"
        android:layout_width="fill_parent"/>

</LinearLayout>