<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/windowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/GawkMaterialTheme.SettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_notification_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <Button
                android:id="@+id/buttonSelectSound"
                style="@style/GawkMaterialTheme.SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_sound" />

            <TextView
                android:id="@+id/textViewSelectSound"
                style="@style/GawkMaterialTheme.SettingsHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_not_sound" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonRepetitionView"
                    style="@style/GawkMaterialTheme.SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_notification_repetition_title" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewRepetition"
                style="@style/GawkMaterialTheme.SettingsHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_repetition_text" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <TextView
            android:id="@+id/textView3"
            style="@style/GawkMaterialTheme.SettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_other_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <Button
                android:id="@+id/buttonAddShortcut"
                style="@style/GawkMaterialTheme.SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_add_icon_add_title" />

            <TextView
                android:id="@+id/textView8"
                style="@style/GawkMaterialTheme.SettingsHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_add_icon_add" />

        </LinearLayout>

        <View
            android:id="@+id/view7"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <Button
                android:id="@+id/buttonSelectTheme"
                style="@style/GawkMaterialTheme.SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_select_theme_title" />

            <TextView
                android:id="@+id/textView9"
                style="@style/GawkMaterialTheme.SettingsHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_select_theme_text" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

    </LinearLayout>
</ScrollView>