<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewDonate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subs_inner_text" />

    <Button
        android:id="@+id/buttonSmallDonate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/GawkMaterialTheme.DefaultButton"
        android:textColor="?primaryColor500"
        android:text="@string/donate_small" />

    <Button
        android:id="@+id/buttonBigDonate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/GawkMaterialTheme.PrimaryButton"
        android:textColor="@color/colorWhite"
        android:text="@string/donate_big" />
</LinearLayout>