<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/GawkMaterialTheme.Body">

        <TextView
            android:text="@string/export_import_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView4"
            style="@style/Base.TextAppearance.AppCompat.Display1"/>

        <TextView
            android:text="@string/export_import_select_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/GawkMaterialTheme.LabelText"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSelectType"
            style="@style/GawkMaterialTheme.Input"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/export_import_set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerSelectType"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView6"
            style="@style/GawkMaterialTheme.LabelText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/editTextFileName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/GawkMaterialTheme.Input"/>

        <TextView
            android:text="@string/export_import_select_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSelectFile"
            android:layout_centerHorizontal="true"
            android:id="@+id/textViewFileSelected" />

        <Button
            android:text="@string/export_import_select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:id="@+id/buttonSelectFile"
            style="@style/GawkMaterialTheme.ButtonMiddle"/>
        <Button
            android:text="@string/export_import_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonImport"
            android:layout_below="@+id/textViewFileSelected"
            android:layout_centerHorizontal="true"
            style="@style/GawkMaterialTheme.ButtonMiddle"/>

        <TextView
            android:text="@string/export_import_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            style="@style/GawkMaterialTheme.DisplayExport"
            android:layout_below="@+id/buttonExport"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/export_import_select_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSelectFolder"
            style="@style/GawkMaterialTheme.ButtonMiddle"
            android:layout_below="@+id/textViewFullFile"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/export_import_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonExport"
            style="@style/GawkMaterialTheme.ButtonMiddle"
            android:layout_below="@+id/buttonSelectFolder"
            android:layout_alignRight="@+id/textViewFullFile"
            android:layout_alignEnd="@+id/textViewFullFile" />

        <TextView
            android:text="@string/export_import_folder_not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFullFile"
            android:layout_below="@+id/editTextFileName"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>